# capra_thermal_cam

./: CMakeLists.txt  package.xml
launch/: capra_thermal_cam.py
