<?xml version="1.0"?>
<package format="3">
  <name>capra_thermal_cam</name>
  <version>0.0.0</version>
  <description>The capra_thermal_cam package</description>
  <maintainer email="alex@todo.todo">alex</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>usb_cam</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
